# advanced_python_ITMO

./: .gitignore  README.md
HW3/: README.md  hash_func_3.py  numpy_mixins_2.py  pyproject.toml
HW3/artifacts/3.3/: C.txt  hash.txt
HW_1/: README.md  capitals.txt  codes.txt  nl.py  pyproject.toml  requirements.txt  tail.py  wc.py
HW_2/: .dockerignore  .env  .gitignore  Dockerfile  README.md  create_pdf.py  docker-compose.yml  requirements.txt
HW_2/PyPI_Project/src/: latex_generator_mr.py
HW_2/artifacts/: latex_code.tex  link_PyPI.txt
HW_2/data/: table_data.xlsx
HW_4/: README.md  fib.py  integrate.py  pipe.py  pyproject.toml
HW_4/artifacts/: execution_times_comparison.txt  hw1_results.txt  hw3_results.txt
HW_5/: .gitignore  README.md  apartments.py  pics.py  pyproject.toml
HW_5/artifacts/: apartments.csv
hw_3/: matrix_ops_1.py
hw_3/artifacts/3.3/: CD.txt
