[tool.poetry]
name = "matrix-ops"
version = "0.1.0"
description = "hw_3"
authors = ["Mikhail-Repkin <mikhail.repkin90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
